src/objects/TGP_Territory_Budget__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>TGP_Terriory_Budgets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Behr_Kilz_Annual_Potential__c</fullName>
        <label>Behr/Kilz Annual Potential</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Carryout_Sales__c</fullName>
        <label>Carryout Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DTP_Sales__c</fullName>
        <label>DTP Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Current_Annual_Paint_Spend__c</fullName>
        <label>Estimated Current Annual Paint Spend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Strategy_You_Will_Follow__c</fullName>
        <label>Strategy You Will Follow</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TGP_Start__c</fullName>
        <label>TGP (Start) $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TGP_Type__c</fullName>
        <label>TGP Type</label>
        <picklist>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TGP_mid_year__c</fullName>
        <label>TGP (mid-Year) $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Target_Date_for_Acquisition__c</fullName>
        <label>Target Date for Acquisition</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Sales__c</fullName>
        <label>Total Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Territory_Budget__c</fullName>
        <formula>TGP_Start__c +  TGP_mid_year__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Territory Budget $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <picklist>
            <picklistValues>
                <fullName>2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012 - Midyear</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013 - Midyear</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014 - Midyear</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015 - Midyear</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016 - Midyear</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017 - Midyear</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018 - Midyear</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019 - Midyear</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020 - Midyear</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>of_Total_Paint_Spend__c</fullName>
        <label>% of Total Paint Spend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>to_Budget__c</fullName>
        <label>% to Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Territory Growth Plan</label>
    <nameField>
        <displayFormat>TGP-{00000}</displayFormat>
        <label>TGP</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Territory Growth Plans</pluralLabel>
    <recordTypes>
        <fullName>Territory_Growth_Plan</fullName>
        <active>true</active>
        <description>Territory Growth Plan record type</description>
        <label>Territory Growth Plan</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Carryout_total_spend</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( ISPICKVAL( TGP_Type__c, &quot;Customer&quot;), ISBLANK(of_Total_Paint_Spend__c))</errorConditionFormula>
        <errorDisplayField>of_Total_Paint_Spend__c</errorDisplayField>
        <errorMessage>Field is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Customer_Carryout</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( ISPICKVAL( TGP_Type__c, &quot;Customer&quot;), ISBLANK(Carryout_Sales__c))</errorConditionFormula>
        <errorDisplayField>Carryout_Sales__c</errorDisplayField>
        <errorMessage>Field is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Customer_DTP</fullName>
        <active>true</active>
        <description>make mandatory field based on type equal to customer</description>
        <errorConditionFormula>AND ( ISPICKVAL( TGP_Type__c, &quot;Customer&quot;), ISBLANK(DTP_Sales__c))</errorConditionFormula>
        <errorDisplayField>DTP_Sales__c</errorDisplayField>
        <errorMessage>Field is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>customer_budget</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( ISPICKVAL( TGP_Type__c, &quot;Customer&quot;), ISBLANK(to_Budget__c))</errorConditionFormula>
        <errorDisplayField>to_Budget__c</errorDisplayField>
        <errorMessage>Field is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>prospect_Behr_pot</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( ISPICKVAL( TGP_Type__c, &quot;Prospect&quot;), ISBLANK(Estimated_Current_Annual_Paint_Spend__c))</errorConditionFormula>
        <errorDisplayField>Behr_Kilz_Annual_Potential__c</errorDisplayField>
        <errorMessage>Field is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>prospect_est_an</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( ISPICKVAL( TGP_Type__c, &quot;Prospect&quot;), ISBLANK(Estimated_Current_Annual_Paint_Spend__c))</errorConditionFormula>
        <errorDisplayField>Estimated_Current_Annual_Paint_Spend__c</errorDisplayField>
        <errorMessage>Field is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>prospect_strategy</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( ISPICKVAL( TGP_Type__c, &quot;Prospect&quot;), ISBLANK(Strategy_You_Will_Follow__c))</errorConditionFormula>
        <errorDisplayField>Strategy_You_Will_Follow__c</errorDisplayField>
        <errorMessage>Field is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>prospect_target</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( ISPICKVAL( TGP_Type__c, &quot;Prospect&quot;), ISBLANK(Target_Date_for_Acquisition__c))</errorConditionFormula>
        <errorDisplayField>Target_Date_for_Acquisition__c</errorDisplayField>
        <errorMessage>Field is required</errorMessage>
    </validationRules>
</CustomObject>